--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
 		"laravel/framework": "5.0.*",
 		"barryvdh/laravel-ide-helper": "~2.0",
 		"guzzlehttp/guzzle": "~5.2",
-		"bugsnag/bugsnag": "~2.5",
-        "doctrine/dbal": "~2.3"
+        "doctrine/dbal": "~2.3",
+		"bugsnag/bugsnag-laravel": "1.*",
+        "laracasts/flash": "~1.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
