--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"guzzlehttp/guzzle": "~5.2",
         "doctrine/dbal": "~2.3",
 		"bugsnag/bugsnag-laravel": "1.*",
-        "laracasts/flash": "~1.3"
+        "laracasts/flash": "~1.3",
+		"planetteamspeak/ts3-php-framework": "~1.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
