--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "doctrine/dbal": "~2.3",
 		"bugsnag/bugsnag-laravel": "1.*",
         "laracasts/flash": "~1.3",
-		"planetteamspeak/ts3-php-framework": "~1.1"
+		"planetteamspeak/ts3-php-framework": "~1.1",
+		"ezyang/htmlpurifier": "v4.6.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
