--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*",
+		"laravel/framework": "5.2.*",
 		"barryvdh/laravel-ide-helper": "~2.0",
 		"guzzlehttp/guzzle": "~5.2",
         "doctrine/dbal": "~2.3",
@@ -15,6 +15,8 @@
 		"ezyang/htmlpurifier": "v4.6.0"
 	},
 	"require-dev": {
+		"symfony/dom-crawler": "~3.0",
+		"symfony/css-selector": "~3.0",
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1"
 	},
